--- a/source/boot/x86/bochs.cfg
+++ b/source/boot/x86/bochs.cfg
@@ -1,20 +1,20 @@
 cpu: count=1, ips=20000000
 megs: 32
 
-log: bochs.txt
+log: run/bochs.txt
 logprefix: %t%e%d
 panic: action=ask
 error: action=report
 info: action=report
 debug: action=ignore
-debugger_log: debug.txt
+debugger_log: run/debug.txt
 
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
 ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
 ata2: enabled=0, ioaddr1=0x1e8, ioaddr2=0x3e0, irq=11
 ata3: enabled=0, ioaddr1=0x168, ioaddr2=0x360, irq=9
 
-com1: enabled=1, mode=file, dev="log.txt"
+com1: enabled=1, mode=file, dev="run/log.txt"
 keyboard: type=mf, keymap=/usr/local/share/bochs/keymaps/x11-pc-de.map
 mouse: type=imps2, enabled=0
 port_e9_hack: enabled=1
