--- a/source/SConstruct
+++ b/source/SConstruct
@@ -285,8 +285,8 @@ def EscapeLib(env, target, source, LIBS = []):
 		)
 		shlib = shenv.SharedLibrary(target, source, LIBS = LIBS)
 		SetLibDeps(env, shlib, LIBS)
-		env.Install('$BINDIR', shlib)
 		env.Install('$DISTDIR/lib', shlib)
+		env.EscapeLink('$BINDIR/lib' + target + '.so', shlib)
 		env.EscapeMap('lib' + target + '.map', shlib)
 
 env.AddMethod(EscapeMap)
