Added a simple clock application.

--- a/source/user/SConscript
+++ b/source/user/SConscript
@@ -10,7 +10,7 @@ if env['TGTTYPE'] == 'x86':
 	env.SConscript(env.Glob('*/SConscript'), 'env')
 else:
 	ignore = [
-		"desktop", "fileman", "gcalc", "glogin", "gsettings", "gtest", "guishell",
+		"desktop", "fileman", "gcalc", "gclock", "glogin", "gsettings", "gtest", "guishell",
 		"slideshow", "plasma"
 	]
 	for f in env.Glob('*/SConscript'):
