Don't run (most of the) drivers as root.
We now have users for the drivers in Escape and specify the user
in the /etc/drivers file. It's not finished yet, because uimng
and tcpip are still running as root. We will fix that soon.

--- a/source/drivers/common/vterm/SConscript
+++ b/source/drivers/common/vterm/SConscript
@@ -1,4 +1,4 @@
 Import('env')
 env.EscapeCXXProg(
-	'sbin', target = 'vterm', source = env.Glob('*.cc'), LIBS = ['vterm', 'usergroup']
+	'sbin', target = 'vterm', source = env.Glob('*.cc'), LIBS = ['vterm']
 )
