--- a/source/user/shell/SConscript
+++ b/source/user/shell/SConscript
@@ -1,2 +1,2 @@
 Import('env')
-env.EscapeCXXProg('bin', target = 'shell', source = env.Glob('*.cc'), LIBS = ['shell'])
+env.EscapeCXXProg('bin', target = 'shell', source = env.Glob('*.cc'), LIBS = ['shell', 'usergroup'])
