stat: use C++ and be more similar to coreutils.

--- a/source/user/stat/SConscript
+++ b/source/user/stat/SConscript
@@ -1,2 +1,2 @@
 Import('env')
-env.EscapeCProg('bin', target = 'stat', source = env.Glob('*.c'))
+env.EscapeCXXProg('bin', target = 'stat', source = env.Glob('*.cc'), LIBS = ['usergroup'])
